--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-Flask>=2.0
-Flask-SQLAlchemy>=2.5
+Flask>=3.0.0
+Flask-SQLAlchemy==3.0.5
+SQLAlchemy==1.4.49
+Werkzeug>=3.0.0
 mysql-connector-python>=8.0
 python-dotenv>=0.19
 bcrypt>=3.2
